--- a/day26/homework/index.html
+++ b/day26/homework/index.html
@@ -1,5 +1,38 @@
 <form>
 
+<h3>Personal Information</h3>
+
+<br>
+
+<label for="r1">First Name</label>
+<br>
+<input type="text" id="r1">
+
+<br><br><br><br><br>
+
+<label for="r2">Last Name</label>
+<br>
+<input type="text" id="r2">
+
+<br><br><br><br><br>
+
+<label for="r3">Email</label>
+<br>
+<input type="text" id="r3" placeholder="example@gmail.com">
+
+<h1>Extra Information Example</h1>
+<br>
+<h3>Show a description of this group of questions...</h3>
+<br>
+<label for="r4">Text Field</label>
+<br>
+<input type="text" id="r4" placeholder="You can write your questions here!">
+<br><br><br><br>
+<textarea>If you enter your information, you will receive 1,000,000 USD in your bank account!
+Thank you for using scamming.com!
+</textarea>
+<br>
+<input type="submit">
 
 
 
