--- a/day37/homework/index.html
+++ b/day37/homework/index.html
@@ -3,42 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>day37</title>
+    <title>Day37</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <form>
-    <div class="d1">
-        <label>YOUR</label>
-        <b><label>WEBSITE<label></b>
-    </div>
+        <img class="i1" src="henrycase.png">
 
-    <button class="b2">Get Started</button>
+        <br><br>
 
-    <label class="l1"> Info</label>
-    <label class="l1">Work</label>
-    <label class="l1">About us</label>
-    <label class="l1">Home</label>
+        <h2 class="h1">Henry Case</h2>
 
-    <br><br><br><br>
+        <br>
 
-    <img class="t1" src="rrrrr.png" alt="">
+         <p class="lorem">Sed odio tempor orc dapibus ultrices, turpis bibendum,<br>neque ipsum dolor magna sed lorem gravida.</p>
 
-    <h1 class="w1">Website <br> Design</h1>
-    <br>
+         <br><br><br><br><br><br>
 
-  
+         <img class="i2" src="gravida.png">
 
-    <label>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque totam cupiditate architecto <br> voluptas corrupti iure repudiandae porro dignissimos nam iste, nulla facilis similique <br> suscipit laudantium magnam pariatur, fuga animi corporis!r</label>
+         <p class="Gravida">Gravida</p>
 
-    
+         <p class="quam">Quam pellentesque et necnam dissimulo <br> donec tempor sed dapibus ultrices.</p>
 
-    <br><br>
+         <img class="b1" src="button.png">
 
-    
+         <br>
+
+         <img class="i2" src="consequat.png">
+
+         <p class="Gravida">Consequat</p>
+
+         <p class="quam">Turpis bibendum neque egestas congue <br> quisque. Jaculum gravida rutrum.</p>
+
+         <img class="b1" src="button.png">
+
+         <br>
+
+         <img class="i2" src="elementum.png">
+
+         <p class="Gravida">Elementum</p>
+
+         <p class="quam">Elementum integer enim, neque volutpat <br> nisl condimentum id condimentum.
+
+         </p>
+
+         <img class="b1" src="button.png">
+
+         <br>
+
+         <img class="i2" src="integer.png">
+
+         <p class="Gravida">Integer</p>
+
+         <p class="quam">Vel quam elementum pulvinar etiam quam <br> lacus donec ultrices tincidunt.
+
+         </p>
+
+         <img class="b1" src="button.png">
+
+         <br>
+
+         <img class="i2" src="ultrices.png">
+
+         <p class="Gravida">Ultrices</p>
+
+         <p class="quam">Lorem ipsum pulvinar etiam quam lacus <br> donec ultrices tincidunt consequat.
+
+         </p>
+
+         <img class="b1" src="button.png">
+
+         <br>
+
+         <img class="q11" src="twitter.png">
 
 
-    <button class="r1">Button Name</button>
+
+
+
 
 
     </form>
