--- a/day47/classwork/index.html
+++ b/day47/classwork/index.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Day47</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <div class="item1">I recived a job offer mid-course, and the subjects I learned <br> were current, if not more so, in the comapny I joined. I <br> honestly feel i got every pennys's worth.</div> 
-        <div class="item2"></div>
-        <div class="item3">item 3</div>
-        <div class="item4">item 4</div>
-        <div class="item5">item 5</div>
+        <div class="item1">I recived a job offer mid-course, and the subjects I learned <br> were current, if not more so, in the comapny I joined. I <br> honestly feel i got every pennys's worth. <br>
+           <span class="w">"I was an EMT for many years before I joined the bootcamp. I've been looking to make a transtiton and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incerdibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most gruieling - time of my life. Since completing the course. I've successfully switched careers. working as a Software Engineer at a VR startup"</span></div>
+
+        <div class="item2">The Team was very supportive and kept me motivated <br> 
+            <span class="qer">"I started as a total newbie with<br> virtually no coding skills. I now work<br> as a mobile engineer for a big<br> company. This was one of the best<br>investments I've made i myself"</span></div>
+
+        <div class="item3">Such a life-changing experience. Highly recommended! <br> 
+        <span class="qer1">"Before joining the bootcamp. I've<br> never written a line of code. I needed<br> some structure from professionals<br> who can help me learn proggramming<br> step by step. I was encouraged to<br> enroll by a former student of theirs<br> who can only say a wonderful things<br> about the program. The entire<br> cirruiculm abd staff did not<br> dissapoint. They were very hands-on<br> and i neer had to wait long for<br> assistance. The aigle team project, in<br> particular, was outstanding. It took<br> my learning to the next level in a way<br> that no tutorial could ever have. In<br> fact, I've often referred to during<br> interviews as an exapmle of my<br> development expirience. It certainly<br> helped me land a job as a full-stack<br> developer after reciving mutiple<br> offers. 100% reccomended!"</span></div>
+
+        <div class="item4">An overall wonderful<br> and rewarding<br> experience<br><br>
+        <span class="qer2">"Thank you for the wonderful<br> experience! I now have a job I really<br> enjoy, and make a good living while<br> doing something i love. "</span></div>
+
+        <div class="item5">Awesome teaching support from Tas who did the bootcamp<br> themselves. Getting guidence from them and learning from<br> their experiences was easy. <br><br>
+        <span class="reer">Awesome teaching support from Tas who did the bootcamp<br> themselves. Getting guidence from them and learning from<br> their experiences was easy.
+            "The staff seem genuienly concerned about my proggress wich i find really refreshing. The<br> program gave me the confidence to be able to go out in the world and present<br> myself as a capable junior developer. The standart is above the rest. You will get the<br> personal attention you need from an incredible community of smart and amazing people. "</span></div>
     </div>
     
 </body>
