--- a/day46/homework/index2.html
+++ b/day46/homework/index2.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day46</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    <div class="container">
-        <div class="aside">Aside</div>
-        <div class="header">Header</div>
+    <div>
+        <div class="sidebar">Sidebar</div>
+        <div class="header">Header </div>
         <div class="sec1">sec 1</div>
         <div class="sec2">sec 2</div>
         <div class="sec3">sec 3</div>
-        <div class="content">Content</div>
-        <div class="footer">Footer</div>
+        <div class="sec4">sec 4</div>
+        <div class="sec5">sec 5</div>
+        <div class="navigation">Navigation</div>
     </div>
     
 </body>
